syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "Protos/shared.proto";

package vera.grpc;

service PeriodService {
	rpc OpenPeriod(OpenPeriodRequest) returns (OpenPeriodReply);
	rpc OpenRegister(OpenRegisterRequest) returns (vera.grpc.shared.Empty);

	rpc ClosePeriod(ClosePeriodRequest) returns (vera.grpc.shared.Empty);

	rpc Get(GetPeriodRequest) returns (Period);
	rpc GetCurrentPeriod(GetCurrentPeriodRequest) returns (Period);
}

message OpenPeriodRequest {
	string supplierSystemId = 1;
}

message OpenPeriodReply {
	string id = 1;
}

message OpenRegisterRequest {
	string supplierSystemId = 1;
	string registerSystemId = 2;
	vera.grpc.shared.DecimalValue openingAmount = 3;
}

message ClosePeriodRequest {
	string id = 1;
	string supplierSystemId = 2;

	// Employee that is responsible for closing the period
	string employeeId = 3;

    // Collection of registers with their closing amounts
	repeated RegisterCloseEntry registers = 4;
}

message GetPeriodRequest {
	string id = 1;
	string supplierSystemId = 2;
}

message GetCurrentPeriodRequest {
	string supplierSystemId = 1;
}

message Period {
    string id = 1;

	google.protobuf.Timestamp opening = 2;
	google.protobuf.Timestamp closing = 3;

	string supplierSystemId = 4;
	repeated PeriodRegisterEntry registers = 5;
}

message PeriodRegisterEntry {
	vera.grpc.shared.Register register = 1;

	vera.grpc.shared.DecimalValue openingAmount = 2;
	vera.grpc.shared.DecimalValue closingAmount = 3;
}

message RegisterCloseEntry {
	string systemId = 1;
	vera.grpc.shared.DecimalValue amount = 2;
}
