syntax = "proto3";

package vera.grpc.shared;

message Empty { }

// Example: 12345.6789 -> { units = 12345, nanos = 678900000 }
// Taken from https://docs.microsoft.com/en-us/dotnet/architecture/grpc-for-wcf-developers/protobuf-data-types#creating-a-custom-decimal-type-for-protobuf
message DecimalValue {

    // Whole units part of the amount
    int64 units = 1;

    // Nano units of the amount (10^-9)
    // Must be same sign as units
    sfixed32 nanos = 2;
}

message Supplier {
    string systemId = 1;
    string name = 2;

    // Registration number of the business
    string registrationNumber = 3;

    // Registration number when reporting taxes
    string taxRegistrationNumber = 4;

    // Address is the physical location of the supplier
    Address address = 5;
}

message Address {
    string street = 1;
    string number = 2;
    string city = 3;
    string postalCode = 4;

    // Country in the ISO 3166-1 format
    string country = 5;

    // Region in the ISO 3166-2 format
    string region = 6;
}
